--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <body class="bg-white dark:bg-black text-black dark:text-white">
     <div id="root"></div>
 
-    <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/portfolio/src/main.jsx?v=5"></script>
+
   </body>
 </html>
