--- a/index.html
+++ b/index.html
@@ -1,33 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/portfolio/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SayantanXBTC</title>
 
-    <!-- 🟦 IMPORTANT: Apply saved theme BEFORE React loads -->
-    <script>
-      const savedTheme = localStorage.getItem("theme") || "dark";
-      if (savedTheme === "dark") {
-        document.documentElement.classList.add("dark");
-      } else {
-        document.documentElement.classList.remove("dark");
-      }
-    </script>
+    <title>SayantanXBTC | Portfolio</title>
 
-    <!-- Prevent flash -->
+    <!-- Smooth background transition -->
     <style>
       html {
+        background-color: black;
+        color: white;
         transition: background-color 0.25s ease, color 0.25s ease;
       }
     </style>
   </head>
 
-  <body class="bg-white dark:bg-black text-black dark:text-white">
+  <body class="bg-black text-white">
     <div id="root"></div>
 
-  <script type="module" src="/portfolio/src/main.jsx?v=5"></script>
-
+    <!-- IMPORTANT: For VITE BUILD, use ONLY raw path -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
